// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-dictionary-item should get a dictionary item by id 1`] = `
{
  "content": [
    {
      "text": "{"id":"00000000-0000-0000-0000-000000000000","name":"Test Dictionary Get","translations":[{"isoCode":"en-US","translation":"Test Translation Get"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-dictionary-item should handle non-existent dictionary item 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
